# crm

./: .gitignore  .windsurfrules  alone-mode-4.1.5.vsix  bump-version.sh  niuma-data.json  niuma-mode-3.5.6.vsix
.claude/: settings.json
.github/workflows/: build-desktop.yml
desktop/: BUILD-WINDOWS.md  BUILD.md  README.md  floating.html  index.html  package-lock.json  package.json  tailwind.config.js
desktop/scripts/: build-windows.sh  generate-icon.cjs  version-bump.js
desktop/src/: App.tsx  floating-main.tsx  index.css
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/.cargo/: config.toml
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: commands.rs  downloader.rs  file_sync.rs  keyboard.rs  lib.rs  main.rs  uploader.rs  window_control.rs
doc/: 桌面端-使用教程（项目主管&技术）.md  桌面端-技术设计说明.md  桌面端-项目文档（交付物&审批）.md  设计对接资料问卷.doc
index/: .env.example  .windsurfrules  AGENTS.md  GIT_GUIDE.md  REQUIREMENTS_FEATURE.md  composer.json  config.php  config_example.php  database_complete_schema_v3.sql  fix_approval.js  nginx-示例配置.conf  nginx.conf.example  package-lock.json  version.php
index/api/: admin_deleted_customer_file_delete.php  admin_deleted_customer_files.php  admin_link_operations.php  admin_permissions.php  admin_recycle_bin.php  admin_roles.php  admin_send_notification.php  admin_users.php  analytics.php  check_upload_config.php  commission_adjustment_save.php  commission_calculate.php  (+255 more)
openspec/: project.md
scripts/: sync_drive_uploads.php
ssl/: fullchain.pem  privkey.pem
(+634 files in other folders)
